Use Talc allocator

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,6 +53,7 @@ arrayvec = { version = "0.7.4", default-features = false }
 crankstart-sys = { version = "0.1.2", path = "crankstart-sys" }
 euclid = { version = "0.22.9", default-features = false, features = [ "libm" ] }
 hashbrown = "0.14.0"
+talc = "4.4.1"
 
 [dev-dependencies]
 randomize = "3.0.1"
